-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.0.0-rc1
-
None
-
Windows 7 64 bit
Monitor running at Ultra HD, scaled to 200%
- Open a project.
- Configure it to use a kit.
- Go to Projects mode.
- Hover the tab control with the kit's name and click the arrow button.
The drop down menu will appear in the wrong place:
The menu should appear right at the position where you clicked. On Linux (and IIRC also on Windows without HiDPI) this works correcty:
For Gerrit Dashboard: QTCREATORBUG-16080 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
156968,2 | TargetSelector: Fix position of "change kit" menu | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |