TargetSelector: Fix position of "change kit" menu

It didn't handle high resolution button pixmaps well.

Task-number: QTCREATORBUG-16080
Change-Id: I1258c30a0fcd9916708ad348f90b06c0185a2c53
Reviewed-by: Alessandro Portale <alessandro.portale@theqtcompany.com>